add: benchmarks between ai

--- a/MaskGenerator/Assets/generator-config.json
+++ b/MaskGenerator/Assets/generator-config.json
@@ -1,17 +1,24 @@
 {
-  "nbImage": 300,
-  "rotationRange": 110,
+  "nbImage": 10000,
+  "rotationRange": 100,
   "posZoneRadius": 7,
-  "cameraHeight": 2,
-  "cameraAngle": 4,
-  "blurQuantityPercent": 50,
+  "cameraHeightRange": {
+    "min": 2,
+    "max": 3
+  },
+  "cameraAngleRange": {
+    "min": 10,
+    "max": 50
+  },
+  "blurQuantityPercent": 80,
   "grainQuantityPercent": 50,
   "colorGradientQuantityPercent": 60,
-  "shapeQuantityPercent": 40,
-  "maxShapeDensity": 0.3,
+  "shapeQuantityPercent": 30,
+  "maxShapeDensity": 0.15,
   "lineWidthMultiplierRange": {
     "min": 0.05,
-    "max": 0.3
+    "max": 0.40
   },
-  "versionDirectory": "0.23"
+  "versionDirectory": "0.32",
+  "fixMaskLineWidth": false
 }
